<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">WL Chat</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="clear_search">Clear Search</string>
    <string name="link">Link</string>
    <string name="scan">Scan</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="select">Select</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="def">Default</string>
    <string name="default_value">Default (%1$s)</string>
    <string name="custom">Custom</string>
    <string name="none">None</string>
    <string name="forum_topics">Topics</string>
    <string name="create_topic">Create Topic</string>
    <string name="edit_topic">Edit Topic</string>
    <string name="topic_name">Topic name</string>
    <string name="delete_topic">Delete Topic</string>
    <string name="delete_topic_confirm">Delete this topic and all its messages?</string>
    <string name="all_topics">All Topics</string>
    <string name="topic_format">%1$s %2$s</string>
    <string name="automatic">Automatic</string>
    <string name="strict">Strict</string>
    <string name="open">Open</string>
    <string name="download">Download</string>
    <string name="downloading">Downloading…</string>
    <string name="open_attachment">Open Attachment</string>
    <string name="join">Join</string>
    <string name="join_group">Join Group</string>
    <string name="join_channel">Join Channel</string>
    <string name="rejoin">Rejoin</string>
    <string name="delete">Delete</string>
    <string name="delete_for_me">Delete for Me</string>
    <string name="delete_for_everyone">Delete for Everyone</string>
    <string name="info">Info</string>
    <string name="update">Update</string>
    <string name="emoji">Emoji</string>
    <string name="attachment">Attachment</string>
    <string name="back">Back</string>
    <string name="close">Close</string>
    <string name="close_window">Close Window</string>
    <string name="forward">Forward</string>
    <string name="create">Create</string>
    <string name="reset">Reset</string>
    <string name="later">Later</string>
    <string name="resend">Resend</string>
    <string name="edited">Edited</string>
    <string name="edit_message">Edit Message</string>
    <string name="archive">Archive</string>
    <string name="unarchive">Unarchive</string>
    <string name="mute">Mute</string>
    <string name="muted">Muted</string>
    <string name="ephemeral_messages">Disappearing Messages</string>
    <string name="ephemeral_messages_hint">Applies to all members of this chat; they can still copy, save, and forward messages.</string>
    <string name="pref_ephemeral_messages">Disappearing Messages</string>
    <string name="save">Save</string>
    <string name="chat">Chat</string>
    <string name="media">Media</string>
    <string name="apps_and_media">Apps &amp; Media</string>
    <string name="profile">Profile</string>
    <string name="all_profiles">All Profiles</string>
    <string name="current_profile">Current Profile</string>
    <string name="main_menu">Main Menu</string>
    <string name="start_chat">Start Chat</string>
    <string name="show_full_message">Show Full Message…</string>
    <string name="mark_all_as_read">Mark All as Read</string>
    <string name="mark_as_read">Mark as Read</string>
    <string name="mark_as_read_short">Read</string>
    <string name="mark_as_unread">Mark as Unread</string>
    <string name="mark_as_unread_short">Unread</string>
    <string name="loading">Loading…</string>
    <string name="hide">Hide</string>
    <string name="activate">Activate</string>
    <string name="load_remote_content">Load Remote Images</string>
    <string name="load_remote_content_ask">Remote images can track you.\n\nThis setting also may load fonts and other content. If disabled, embedded or cached images may appear.\n\nLoad remote images?</string>
    <string name="always">Always</string>
    <string name="always_load_remote_images">Always Load Remote Images</string>
    <string name="once">Once</string>
    <string name="show_warning">Show Warning</string>
    <string name="not_now">Not now</string>
    <string name="never">Never</string>
    <string name="one_moment">One moment…</string>
    <string name="done">Done</string>
    <string name="undo">Undo</string>
    <string name="offline">Offline</string>
    <string name="next">Next</string>
    <string name="warning">Warning</string>
    <string name="error">Error</string>
    <string name="error_x">Error: %1$s</string>
    <string name="no_app_to_handle_data">Can\'t find an app to handle this type of data.</string>
    <string name="no_browser_installed">No browser installed.</string>
    <string name="file_not_found">Could not find %1$s.</string>
    <string name="cannot_save_file">Cannot save %1$s.</string>
    <string name="copied_to_clipboard">Copied to clipboard.</string>
    <string name="contacts_headline">Contacts</string>
    <string name="email_address">Email Address</string>
    <string name="bad_email_address">Bad email address.</string>
    <string name="password">Password</string>
    <string name="existing_password">Existing Password</string>
    <string name="now">Now</string>
    <string name="danger">Danger</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="this_week">This week</string>
    <string name="this_month">This month</string>
    <string name="last_week">Last week</string>
    <string name="last_month">Last month</string>
    <string name="last_seen_at">last seen at %1$s</string>
    <string name="last_seen_relative">last seen %1$s</string>
    <string name="last_seen_unknown">last seen: Unknown</string>
    <plurals name="call_duration_minutes">
        <item quantity="one">%d minute duration</item>
        <item quantity="other">%d minutes duration</item>
    </plurals>
    <string name="call_duration_less_than_a_minute">Less than 1 minute</string>
    <plurals name="n_minutes">
        <item quantity="one">%d min</item>
        <item quantity="other">%d min</item>
    </plurals>
    <plurals name="n_hours">
        <item quantity="one">%d hour</item>
        <item quantity="other">%d hours</item>
    </plurals>
    <plurals name="n_chats">
        <item quantity="one">%d chat</item>
        <item quantity="other">%d chats</item>
    </plurals>
    <plurals name="n_contacts">
        <item quantity="one">%d contact</item>
        <item quantity="other">%d contacts</item>
    </plurals>
    <plurals name="n_messages">
        <item quantity="one">%d message</item>
        <item quantity="other">%d messages</item>
    </plurals>
    <plurals name="n_reactions">
        <item quantity="one">%d reaction</item>
        <item quantity="other">%d reactions</item>
    </plurals>
    <plurals name="n_members">
        <item quantity="one">%d member</item>
        <item quantity="other">%d members</item>
    </plurals>
    <plurals name="n_recipients">
        <item quantity="one">%d subscriber</item>
        <item quantity="other">%d subscribers</item>
    </plurals>
    <plurals name="n_selected">
        <item quantity="one">%d Selected</item>
        <item quantity="other">%d Selected</item>
    </plurals>
    <string name="selected_colon">Selected:</string>
    <string name="selected">Selected</string>
    <string name="self">Me</string>
    <string name="draft">Draft</string>
    <string name="image">Image</string>
    <string name="reply_noun">Reply</string>
    <string name="quote_selection">Quote</string>
    <string name="wl_chat_user_badge">WL</string>
    <string name="member_name_with_wl_chat_badge">%1$s · WL</string>
    <string name="forum_requires_wl_chat_user">Only WL Chat users can join forums</string>
    <string name="new_content_update_app">New content. Update WL Chat</string>
    <string name="gif">GIF</string>
    <string name="sticker">Sticker</string>
    <string name="add_to_sticker_collection">Add to Sticker Collection</string>
    <string name="add_stickers_instructions">To add stickers, tap "Open Sticker Folder", create a subfolder for your sticker pack, and drag image and sticker files there</string>
    <string name="open_sticker_folder">Open Sticker Folder</string>
    <string name="ask_add_sticker_to_collection">Add this sticker to your collection?</string>
    <string name="ask_delete_sticker">Delete this sticker?</string>
    <string name="sticker_picker_empty_hint">Tap a sticker to add it here.</string>
    <string name="images">Images</string>
    <string name="audio">Audio</string>
    <string name="voice_message">Voice Message</string>
    <string name="forwarded">Forwarded</string>
    <string name="forwarded_message">Forwarded Message</string>
    <string name="forwarded_by">Forwarded by %1$s</string>
    <string name="video">Video</string>
    <string name="documents">Documents</string>
    <string name="contact">Contact</string>
    <string name="bot">bot</string>
    <string name="camera">Camera</string>
    <string name="capture">Capture</string>
    <string name="switch_camera">Switch Camera</string>
    <string name="toggle_camera">Toggle Camera</string>
    <string name="toggle_fullscreen">Toggle Full Screen Mode</string>
    <string name="location">Location</string>
    <string name="subject">Subject</string>
    <string name="menu_send">Send</string>
    <string name="menu_toggle_keyboard">Toggle Emoji Keyboard</string>
    <string name="menu_add_attachment">Add Attachment</string>
    <string name="multidevice_receiver_title">Add as Second Device</string>
    <string name="onboarding_create_instant_account">Create New Profile</string>
    <string name="add_transport">Add Relay</string>
    <string name="transport_list_hint">Messages are received on all relays.\n\n⚠️ If you change anything here, make sure all your devices run at least version 2.47.0. Otherwise older devices may miss messages.</string>
    <string name="import_backup_title">Restore from Backup</string>
    <string name="pref_blocked_contacts">Blocked Contacts</string>
    <string name="pref_screen_security">Screen Security</string>
    <string name="pref_screen_security_explain">Request to block screenshots in the recents list and inside the app</string>
    <string name="pref_incognito_keyboard">Incognito Keyboard</string>
    <string name="pref_incognito_keyboard_explain">Request keyboard to disable personalized learning</string>
    <string name="pref_read_receipts">Read Receipts</string>
    <string name="pref_read_receipts_explain">If read receipts are disabled, you won\'t be able to see read receipts from others.</string>
    <string name="delete_old_messages">Delete Old Messages</string>
    <string name="autodel_device_title">Delete Messages from Device</string>
    <string name="managed_storage_title">Storage Management</string>
    <string name="managed_storage_summary">Auto-cleanup to stay within the 15 MB storage limit</string>
    <string name="autodel_messages_title">Auto-delete messages</string>
    <string name="autodel_messages_summary">Remove old messages from server to save storage</string>
    <string name="autodel_media_title">Auto-delete media</string>
    <string name="autodel_media_summary">Remove old photos, videos, and files from device</string>
    <string name="relay_add_quick">Add Email Account</string>
    <string name="relay_add_quick_summary">Connect Gmail, Outlook, Yahoo, or any email provider</string>
    <string name="relay_will_receive_on_all">Messages are received on all relays</string>
    <string name="format_bold">Bold</string>
    <string name="format_italic">Italic</string>
    <string name="format_underline">Underline</string>
    <string name="format_strikethrough">Strikethrough</string>
    <string name="format_code">Code</string>
</resources>