<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_welcome_gradient"
    tools:context=".WelcomeActivity">

    <LinearLayout
        android:id="@+id/content_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <androidx.legacy.widget.Space
            android:layout_weight="4"
            android:layout_width="match_parent"
            android:layout_height="0dp" />

        <ImageView
            android:id="@+id/welcome_icon"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_weight="4"
            android:gravity="center"
            android:src="@drawable/app_logo"
            android:paddingLeft="35dp"
            android:paddingRight="35dp"
            android:scaleType="fitCenter"
            android:importantForAccessibility="no" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:src="@drawable/app_name_logo"
            android:paddingLeft="35dp"
            android:paddingRight="35dp"
            android:scaleType="fitCenter"
            android:layout_marginBottom="20dp"
            android:importantForAccessibility="no" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal">

            <Button
                style="@style/WhiteButtonPrimary"
                android:id="@+id/signup_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:layout_marginBottom="16dp"
                android:text="@string/onboarding_create_instant_account" />

            <Button
                style="@style/WhiteButtonSecondary"
                android:id="@+id/add_as_second_device_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:layout_marginBottom="16dp"
                android:text="@string/multidevice_receiver_title" />

            <Button
                style="@style/WhiteButtonSecondary"
                android:id="@+id/backup_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:layout_marginBottom="16dp"
                android:text="@string/import_backup_title" />

        </LinearLayout>

        <androidx.legacy.widget.Space
            android:layout_weight="4"
            android:layout_width="match_parent"
            android:layout_height="0dp" />

    </LinearLayout>

</FrameLayout>
